tooling/nargo_cli/tests/snapshots/execution_success/integer_array_indexing/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "arr",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _4",
    "private parameters indices : [_0, _1, _2, _3]",
    "public parameters indices : []",
    "return value indices : [_4]",
    "BLACKBOX::RANGE [(_3, 32)] []",
    "EXPR [ (-1, _0) (-1, _1) (-1, _2) (-1, _3) (1, _4) 0 ]"
  ],
  "debug_symbols": "ndLdCoMgFAfwd/G6C2t9v8oYYXYKQVRMgxG9+yzSxSAYXunx7++IcFY0QG+njolRzqh9rqjXjHM2dVxSYpgU7nTdEuTLzmgAd4QuuVOKaBAGtcJynqCFcHtcmhURx2qIdilOEIjBra7hyDjsuy35anxPU1yfOM3SwIv/fZ55n5cxPmuCr2J8WXpf4RhfPIKP+n8d3m+i/l/VN/7lKkKZ/p2YhWhGeg5nOVpBL6l5K5/4iVNaUhishr3TkbneHw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
